...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/headerLayout"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btnDodajUtakmice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dodaj Utakmicu"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp" />
...
