...
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_match_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_add_24"
            app:backgroundTint="@color/lavender"
...
